# rustalize

./: Cargo.toml  README.md
examples/: complex_enum.rs  more_trait.rs  simple_trait.rs
src/: lib.rs
